# azure-web-app

./: .gitignore  README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: dev_dom-test-fnapp.yml  main_dom-prod-fnapp.yml
