[project]
name = "azure-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cosmos==4.14.2",
    "azure-functions==1.24.0",
    "azure-identity==1.25.1",
    "azure-storage-blob==12.27.1",
    "cryptography==43.0.3",
]
